--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "",
 	"main": "",
 	"scripts": {
-		"build": "webpack"
+		"build": "webpack",
+		"lint": "prettier --check .",
+		"format": "prettier --write ."
 	},
 	"keywords": [],
 	"author": "",
@@ -12,6 +14,7 @@
 	"private": true,
 	"devDependencies": {
 		"@types/node": "^22.7.5",
+		"prettier": "^3.3.3",
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.6.3",
