--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "",
 	"main": "",
 	"scripts": {
-		"build": "webpack",
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
 		"lint": "prettier --check .",
 		"format": "prettier --write ."
 	},
@@ -18,10 +20,10 @@
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.6.3",
-		"webpack": "^5.95.0",
-		"webpack-cli": "^5.1.4"
+		"vite": "^5.4.8"
 	},
 	"dependencies": {
 		"nostr-tools": "^2.7.2"
-	}
+	},
+	"type": "module"
 }
